--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-    Copyright (c) 2020, RTE (http://www.rte-france.com)
+    Copyright (c) 2021, RTE (http://www.rte-france.com)
     This Source Code Form is subject to the terms of the Mozilla Public
     License, v. 2.0. If a copy of the MPL was not distributed with this
     file, You can obtain one at http://mozilla.org/MPL/2.0/.
@@ -46,13 +46,17 @@
     <properties>
         <java.version>11</java.version>
 
-        <gridsuite-dependencies.version>3</gridsuite-dependencies.version>
+        <gridsuite-dependencies.version>4</gridsuite-dependencies.version>
         <jib.from.image>gridsuite/java-dynawo</jib.from.image>
-        <powsybl-core.version>3.7.1</powsybl-core.version>
-        <powsybl-network-store-client.version>1.0.0-SNAPSHOT</powsybl-network-store-client.version>
-        <springboot.version>2.3.0.RELEASE</springboot.version>
 
+        <h2database.version>1.4.200</h2database.version>
         <mock.web.server.version>4.6.0</mock.web.server.version>
+        <powsybl-core.version>3.8.0</powsybl-core.version>
+        <powsybl-dynawo.version>1.0.0-SNAPSHOT</powsybl-dynawo.version>
+        <powsybl-network-store-client.version>1.0.0-SNAPSHOT</powsybl-network-store-client.version>
+        <r2dbc-h2.version>0.8.4.RELEASE</r2dbc-h2.version>
+        <r2dbc-postgresql.version>0.8.6.RELEASE</r2dbc-postgresql.version>
+        <springboot.version>2.3.0.RELEASE</springboot.version>
     </properties>
 
     <build>
@@ -91,7 +95,7 @@
 
     <dependencyManagement>
         <dependencies>
-            <!-- overrides of imports -->
+            <!-- overrides of imports needed to get 2.3 so we have r2dbc-->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
@@ -115,7 +119,7 @@
         <dependency>
             <groupId>com.powsybl</groupId>
             <artifactId>powsybl-iidm-impl</artifactId>
-            <version>3.7.1</version>
+            <version>${powsybl-core.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -124,7 +128,7 @@
         <dependency>
             <groupId>io.r2dbc</groupId>
             <artifactId>r2dbc-postgresql</artifactId>
-            <version>0.8.6.RELEASE</version>
+            <version>${r2dbc-postgresql.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -154,7 +158,7 @@
         <dependency>
             <groupId>com.powsybl</groupId>
             <artifactId>powsybl-dynawo</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>${powsybl-dynawo.version}</version>
         </dependency>
         <dependency>
             <groupId>com.powsybl</groupId>
@@ -182,12 +186,12 @@
         <dependency>
             <groupId>io.r2dbc</groupId>
             <artifactId>r2dbc-h2</artifactId>
-            <version>0.8.4.RELEASE</version>
+            <version>${r2dbc-h2.version}</version>
         </dependency>
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>1.4.200</version>
+            <version>${h2database.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -213,7 +217,6 @@
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>mockwebserver</artifactId>
-            <version>${mock.web.server.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -229,36 +232,4 @@
             <classifier>test-binder</classifier>
         </dependency>
     </dependencies>
-
-    <profiles>
-        <!-- needed for embedded-cassandra to download cassandra (only once) through authentified proxies -->
-        <profile>
-            <id>proxy</id>
-            <activation>
-                <property>
-                    <name>proxyHost</name>
-                </property>
-            </activation>
-            <build>
-                <pluginManagement>
-                    <plugins>
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-surefire-plugin</artifactId>
-                            <configuration>
-                                <systemPropertyVariables>
-                                    <proxyHost>${proxyHost}</proxyHost>
-                                    <proxyPort>${proxyPort}</proxyPort>
-                                    <proxyUser>${proxyUser}</proxyUser>
-                                    <proxyPassword>${proxyPassword}</proxyPassword>
-                                    <jdk.http.auth.tunneling.disabledSchemes></jdk.http.auth.tunneling.disabledSchemes>
-                                </systemPropertyVariables>
-                            </configuration>
-                        </plugin>
-                    </plugins>
-                </pluginManagement>
-            </build>
-        </profile>
-    </profiles>
-
 </project>
