--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <parent>
         <groupId>com.powsybl</groupId>
         <artifactId>powsybl-parent-ws</artifactId>
-        <version>3</version>
+        <version>5</version>
         <relativePath/>
     </parent>
 
@@ -46,15 +46,15 @@
     <properties>
         <java.version>11</java.version>
 
-        <gridsuite-dependencies.version>4</gridsuite-dependencies.version>
+        <gridsuite-dependencies.version>5</gridsuite-dependencies.version>
         <jib.from.image>gridsuite/java-dynawo</jib.from.image>
+        <jib.to.image>gridsuite/dynamic-simulation-server</jib.to.image>
 
         <h2database.version>1.4.200</h2database.version>
         <powsybl-dynawo.version>1.0.0-SNAPSHOT</powsybl-dynawo.version>
         <powsybl-network-store-client.version>1.0.0-SNAPSHOT</powsybl-network-store-client.version>
         <r2dbc-h2.version>0.8.4.RELEASE</r2dbc-h2.version>
         <r2dbc-postgresql.version>0.8.6.RELEASE</r2dbc-postgresql.version>
-        <springboot.version>2.3.0.RELEASE</springboot.version>
     </properties>
 
     <build>
@@ -93,15 +93,6 @@
 
     <dependencyManagement>
         <dependencies>
-            <!-- overrides of imports needed to get 2.3 so we have r2dbc-->
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-dependencies</artifactId>
-                <version>${springboot.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-
             <!-- imports -->
             <dependency>
                 <groupId>org.gridsuite</groupId>
