--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <parent>
         <groupId>com.powsybl</groupId>
         <artifactId>powsybl-parent-ws</artifactId>
-        <version>3</version>
+        <version>4</version>
         <relativePath/>
     </parent>
 
@@ -46,11 +46,10 @@
     <properties>
         <java.version>11</java.version>
 
-        <gridsuite-dependencies.version>5</gridsuite-dependencies.version>
+        <gridsuite-dependencies.version>6</gridsuite-dependencies.version>
         <jib.from.image>gridsuite/java-dynawo</jib.from.image>
 
         <h2database.version>1.4.200</h2database.version>
-        <powsybl-dynawo.version>1.0.0-SNAPSHOT</powsybl-dynawo.version>
         <powsybl-network-store-client.version>1.0.0-SNAPSHOT</powsybl-network-store-client.version>
         <r2dbc-h2.version>0.8.4.RELEASE</r2dbc-h2.version>
         <r2dbc-postgresql.version>0.8.6.RELEASE</r2dbc-postgresql.version>
@@ -153,8 +152,11 @@
         </dependency>
         <dependency>
             <groupId>com.powsybl</groupId>
-            <artifactId>powsybl-dynawo</artifactId>
-            <version>${powsybl-dynawo.version}</version>
+            <artifactId>powsybl-dynawaltz</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.powsybl</groupId>
+            <artifactId>powsybl-dynawaltz-dsl</artifactId>
         </dependency>
         <dependency>
             <groupId>com.powsybl</groupId>
