Give more flexibility for jdbc url: schemas, query parameters, dbname

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,11 @@ server :
   forward-headers-strategy: framework
 
 spring:
+  r2dbc:
+    url: ${dbUrl}
+    username: ${login}
+    password: ${password}
+
   rabbitmq:
     addresses: localhost
     port: 5672
@@ -24,3 +29,14 @@ spring:
 network-store-server:
   preloading-strategy: COLLECTION
   base-uri: http://localhost:8080/
+
+# this structure is shared among all microservices, if you change it, change it everywhere
+# customQuery allows a microservice to set query parameters specific to itself
+# if customQuery is empty, set queryBegin to "?", otherwise set it to "&"
+# this allow the user to add additional query elements common to all microservices
+# and using the appropriate leading character depending on whether the microsevice
+# uses custom query parameters
+queryBegin: '?'
+customQuery:
+dbName: ds
+dbApi: r2dbc
