--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v1
         with:
           repository: powsybl/powsybl-network-store
-          ref: refs/heads/master
+          ref: refs/heads/main
 
       - name: Build and install network store client with Maven
         run: mvn --batch-mode -Pclient -DskipTests=true --file ../powsybl-network-store/pom.xml install
@@ -68,7 +68,7 @@ jobs:
 
       - name: Broadcast update event
         if: github.ref == 'refs/heads/main'
-        uses: gridsuite/broadcast-event@master
+        uses: gridsuite/broadcast-event@main
         with:
           token: ${{ secrets.REPO_ACCESS_TOKEN }}
           event-type: dynamic_simulation_server_updated
