--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
     <properties>
         <java.version>11</java.version>
 
-        <gridsuite-dependencies.version>10</gridsuite-dependencies.version>
+        <gridsuite-dependencies.version>11-SNAPSHOT</gridsuite-dependencies.version>
         <jib.from.image>gridsuite/java-dynawo</jib.from.image>
         <jib.container.environment>SPRING_PROFILES_ACTIVE=default</jib.container.environment>
 
