--- a/src/test/resources/application-default.yml
+++ b/src/test/resources/application-default.yml
@@ -1,9 +1,14 @@
 spring:
   jpa:
     database: H2
+    hibernate:
+      ddl-auto: create-drop
     properties:
       dialect: org.hibernate.dialect.H2Dialect
       hibernate.format_sql: true
+
+  liquibase:
+    enabled: false
 
 logging:
   level:
