--- a/src/main/resources/config/application.yaml
+++ b/src/main/resources/config/application.yaml
@@ -10,6 +10,8 @@ spring:
         consumeRun-in-0:
           destination: ${powsybl-ws.rabbitmq.destination.prefix:}ds.run
           group: dsGroup
+          consumer:
+            concurrency: 2
         publishResult-out-0:
           destination: ${powsybl-ws.rabbitmq.destination.prefix:}ds.result
         publishRun-out-0:
