fix: properties changed after ws-commons update
Signed-off-by: LE SAULNIER Kevin <kevin.lesaulnier@rte-france.com>

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -6,5 +6,9 @@ spring:
     addresses: localhost
     port: 5672
 
+powsybl-ws:
+  database:
+    host: localhost
+
 network-store-server:
   base-uri: http://localhost:8080/
