--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,8 @@
 
     <dependencyManagement>
         <dependencies>
+            <!-- overrides of imports -->
+
             <!-- imports -->
             <dependency>
                 <groupId>org.gridsuite</groupId>
@@ -98,13 +100,16 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+
+            <!-- project specific dependencies -->
         </dependencies>
     </dependencyManagement>
 
     <dependencies>
+        <!-- Compilation dependencies -->
         <dependency>
             <groupId>com.powsybl</groupId>
-            <artifactId>powsybl-network-store-iidm-impl</artifactId>
+            <artifactId>powsybl-iidm-api</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
