--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -3,3 +3,6 @@ databaseChangeLog:
   - include:
       file: changesets/changelog_2021-10-19T14:07:51Z.xml
       relativeToChangelogFile: true
+  - include:
+      file: changesets/changelog_2022-12-06T14:58:03Z.xml
+      relativeToChangelogFile: true
