--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -15,3 +15,6 @@ network-store-server:
 
 time-series-server:
   base-uri: http://localhost:5034
+
+dynamic-mapping-server:
+    base-uri: http://localhost:5036
