Setup Dynawo in github workflow

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,6 +19,14 @@ jobs:
         with:
           java-version: 11
 
+      - name: Setup Dynawo
+        env:
+          DYNAWO_VERSION: 1.3.1
+        run: |
+          wget https://github.com/dynawo/dynawo/releases/download/v${DYNAWO_VERSION}/Dynawo_Linux_v${DYNAWO_VERSION}.zip
+          unzip Dynawo_Linux_v${DYNAWO_VERSION}.zip
+          rm -f Dynawo_Linux_v${DYNAWO_VERSION}.zip
+
       - name: Checkout network store sources
         uses: actions/checkout@v1
         with:
