Check current working directory in github

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,7 +26,8 @@ jobs:
           wget https://github.com/dynawo/dynawo/releases/download/v${DYNAWO_VERSION}/Dynawo_Linux_v${DYNAWO_VERSION}.zip
           unzip Dynawo_Linux_v${DYNAWO_VERSION}.zip
           rm -f Dynawo_Linux_v${DYNAWO_VERSION}.zip
-          ls -al /dynawo
+          pwd
+          ls -al ${GITHUB_WORKSPACE}
 
       - name: Checkout network store sources
         uses: actions/checkout@v1
