Extract into interfaces

--- a/src/test/resources/com/powsybl/config/test/config.yml
+++ b/src/test/resources/com/powsybl/config/test/config.yml
@@ -1,4 +1,5 @@
 dynawaltz:
+#  homeDir: /home/runner/work/dynamic-simulation-server/dynamic-simulation-server/dynawo
   homeDir: /home/phamquy/Projects/dynawo/dynawo
   debug: true
 
