--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,6 +20,7 @@ jobs:
           java-version: 11
 
       - name: Setup Dynawo
+        working-directory: ../dynawo
         env:
           DYNAWO_VERSION: 1.3.1
         run: |
@@ -57,8 +58,6 @@ jobs:
 
       - name: Checkout sources
         uses: actions/checkout@v1
-        with:
-            clean: false
 
       - name: Build with Maven
         run: mvn --batch-mode -P jacoco verify
