--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,7 +24,7 @@ jobs:
           DYNAWO_VERSION: 1.3.1
         run: |
           wget https://github.com/dynawo/dynawo/releases/download/v${DYNAWO_VERSION}/Dynawo_Linux_v${DYNAWO_VERSION}.zip
-          unzip Dynawo_Linux_v${DYNAWO_VERSION}.zip
+          unzip Dynawo_Linux_v${DYNAWO_VERSION}.zip -d ..
           rm -f Dynawo_Linux_v${DYNAWO_VERSION}.zip
           ls -ald ${PWD}/dynawo/*
 
@@ -56,9 +56,7 @@ jobs:
         run: mvn --batch-mode -DskipTests=true --file ../powsybl-dynawo/pom.xml install
 
       - name: Checkout sources
-        uses: actions/checkout@v2
-        with:
-          clean: false
+        uses: actions/checkout@v1
 
       - name: Build with Maven
         run: mvn --batch-mode -P jacoco verify
