homogenize of backing services keys
Signed-off-by: sBouzols <sylvain.bouzols@gmail.com>

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -10,5 +10,6 @@ powsybl-ws:
   database:
     host: localhost
 
-network-store-server:
-  base-uri: http://localhost:8080/
+backing-services:
+  network-store-server:
+    base-uri: http://localhost:8080/
