--- a/src/main/resources/config/application.yaml
+++ b/src/main/resources/config/application.yaml
@@ -18,8 +18,9 @@ spring:
           destination: ${powsybl-ws.rabbitmq.destination.prefix:}ds.run
       output-bindings: publishResult;publishRun
 
-network-store-server:
-  preloading-strategy: COLLECTION
+backing-services:
+  network-store-server:
+    preloading-strategy: COLLECTION
 
 powsybl-ws:
   database:
