Homogenize keys backing services (#41)
Homogenize keys backing services
Replace backing-services conf scope by powsybl|gridsuite.services

Signed-off-by: sBouzols <sylvain.bouzols@gmail.com>

--- a/src/main/resources/config/application.yaml
+++ b/src/main/resources/config/application.yaml
@@ -18,8 +18,10 @@ spring:
           destination: ${powsybl-ws.rabbitmq.destination.prefix:}ds.run
       output-bindings: publishResult;publishRun
 
-network-store-server:
-  preloading-strategy: COLLECTION
+powsybl:
+  services:
+    network-store-server:
+      preloading-strategy: COLLECTION
 
 powsybl-ws:
   database:
