--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -10,5 +10,7 @@ powsybl-ws:
   database:
     host: localhost
 
-network-store-server:
-  base-uri: http://localhost:8080/
+powsybl:
+  services:
+    network-store-server:
+      base-uri: http://localhost:8080/
