--- a/src/main/resources/config/application.yaml
+++ b/src/main/resources/config/application.yaml
@@ -4,7 +4,7 @@ spring:
 
   cloud:
     function:
-      definition: consumeRun
+      definition: consumeRun;consumeCancel
     stream:
       bindings:
         consumeRun-in-0:
@@ -12,11 +12,19 @@ spring:
           group: dsGroup
           consumer:
             concurrency: 2
-        publishResult-out-0:
-          destination: ${powsybl-ws.rabbitmq.destination.prefix:}ds.result
         publishRun-out-0:
           destination: ${powsybl-ws.rabbitmq.destination.prefix:}ds.run
-      output-bindings: publishResult;publishRun
+        publishResult-out-0:
+          destination: ${powsybl-ws.rabbitmq.destination.prefix:}ds.result
+        consumeCancel-in-0:
+          destination: ${powsybl-ws.rabbitmq.destination.prefix:}ds.cancel
+        publishCancel-out-0:
+          destination: ${powsybl-ws.rabbitmq.destination.prefix:}ds.cancel
+        publishStopped-out-0:
+          destination: ${powsybl-ws.rabbitmq.destination.prefix:}ds.stopped
+        publishFailed-out-0:
+          destination: ${powsybl-ws.rabbitmq.destination.prefix:}ds.failed
+      output-bindings: publishRun;publishResult;publishCancel;publishStopped;publishFailed
 
 powsybl:
   services:
