--- a/src/test/resources/com/powsybl/config/test/config.yml
+++ b/src/test/resources/com/powsybl/config/test/config.yml
@@ -1,4 +1,5 @@
 dynawaltz:
+  # to remove when implementing test with container
   homeDir: /home/runner/work/dynamic-simulation-server/dynawo
   debug: true
 
