--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -14,3 +14,10 @@ powsybl:
   services:
     network-store-server:
       base-uri: http://localhost:8080/
+
+gridsuite:
+  services:
+    timeseries-server:
+      base-uri: http://localhost:5037
+    dynamic-mapping-server:
+      base-uri: http://localhost:5036
