--- a/src/main/resources/config/application.yaml
+++ b/src/main/resources/config/application.yaml
@@ -35,6 +35,6 @@ powsybl-ws:
   database:
     name: ds
 
-# default values for dynamic simulation providers "DynaWaltz"
+# default values for dynamic simulation providers is "DynaWaltz"
 dynamic-simulation:
   default-provider: DynaWaltz
