Dynamic Simulation - Config parameters startTime, stopTime, mapping, solver and provider (#49)

--- a/src/main/resources/config/application.yaml
+++ b/src/main/resources/config/application.yaml
@@ -34,3 +34,7 @@ powsybl:
 powsybl-ws:
   database:
     name: ds
+
+# default values for dynamic simulation providers is "DynaWaltz"
+dynamic-simulation:
+  default-provider: DynaWaltz
