Dynamic simulation - Build with java-dynawo image instead of ubuntu

--- a/src/test/resources/com/powsybl/config/test/config.yml
+++ b/src/test/resources/com/powsybl/config/test/config.yml
@@ -1,5 +1,5 @@
 dynawaltz:
   # to remove when implementing test with container
-  homeDir: /home/runner/work/dynamic-simulation-server/dynawo
+  homeDir: /dynawo
   debug: true
 
