--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   build:
 
-    runs-on: powsybl/java-dynawo-latest
+    runs-on: powsybl/java-dynawo:1.4.0
 
     steps:
       - name: Set up JDK 11
