Using DockerLocalComputationManager for testing with container java-dynawo:1.4.0

--- a/pom.xml
+++ b/pom.xml
@@ -204,6 +204,10 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>com.powsybl</groupId>
+            <artifactId>powsybl-computation-local-test</artifactId>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
