--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,15 +13,11 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    container:
-      image: powsybl/java-dynawo:1.4.0
-      options: --user root
-
     steps:
-      - name: Set up Maven
-        uses: stCarolas/setup-maven@v4.5
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
         with:
-          maven-version: 3.9.0
+          java-version: 11
 
       - name: Checkout sources
         uses: actions/checkout@v1
