rename all existing changeset files
Signed-off-by: David BRAQUART <david.braquart@rte-france.com>

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,8 +1,8 @@
 databaseChangeLog:
 
   - include:
-      file: changesets/changelog_2021-10-19T14:07:51Z.xml
+      file: changesets/changelog_20211019T140751Z.xml
       relativeToChangelogFile: true
   - include:
-      file: changesets/changelog_2022-12-06T14:58:03Z.xml
+      file: changesets/changelog_20221206T145803Z.xml
       relativeToChangelogFile: true
