--- a/pom.xml
+++ b/pom.xml
@@ -144,10 +144,12 @@
         <dependency>
             <groupId>com.powsybl</groupId>
             <artifactId>powsybl-dynawaltz</artifactId>
+            <version>2.1.0</version>
         </dependency>
         <dependency>
             <groupId>com.powsybl</groupId>
             <artifactId>powsybl-dynawaltz-dsl</artifactId>
+            <version>2.1.0</version>
         </dependency>
         <dependency>
             <groupId>com.powsybl</groupId>
