Add powsybl-dynawo-commons to correct Caused by: java.lang.NoClassDefFoundError: com/powsybl/dynawo/commons/DynawoConfig

--- a/pom.xml
+++ b/pom.xml
@@ -143,6 +143,11 @@
         </dependency>
         <dependency>
             <groupId>com.powsybl</groupId>
+            <artifactId>powsybl-dynawo-commons</artifactId>
+            <version>2.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.powsybl</groupId>
             <artifactId>powsybl-dynawaltz</artifactId>
             <version>2.1.0</version>
         </dependency>
