add missing liquibase migration dropping unused column
forgotten in 6ddc839 ?

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -6,3 +6,6 @@ databaseChangeLog:
   - include:
       file: changesets/changelog_20221206T145803Z.xml
       relativeToChangelogFile: true
+  - include:
+      file: changesets/changelog_20231221T165233Z.xml
+      relativeToChangelogFile: true
