--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -21,3 +21,13 @@ gridsuite:
       base-uri: http://localhost:5037
     dynamic-mapping-server:
       base-uri: http://localhost:5036
+
+management:
+  metrics:
+    distribution:
+      percentiles-histogram:
+        http.server.requests: true
+  endpoints:
+    web:
+      exposure:
+        include: prometheus, health, info
