add report-server uri into local config yml file

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -21,6 +21,8 @@ gridsuite:
       base-uri: http://localhost:5037
     dynamic-mapping-server:
       base-uri: http://localhost:5036
+    report-server:
+      base-uri: http://localhost:5028
 
 management:
   metrics:
